feat: created new components/pages and added icon like lucide

--- a/public/ui/components/link.html
+++ b/public/ui/components/link.html
@@ -1,4 +1,4 @@
-<template x-data="" x-component.unwrap="link" variant="classic">
+<template x-data x-component.unwrap="link" variant="classic">
     <a 
     class="h-fit w-fit flex! items-center justify-center"
     :class="{
