feat(component): enhanced button component and integrating css variables

--- a/public/ui/components/button.html
+++ b/public/ui/components/button.html
@@ -1,7 +1,7 @@
 <template x-component.unwrap="button" variant="primary">
-    <button class="w-fit flex!  
-    rounded-xl px-btn-x py-btn-y font-medium text-xl
-    gap-(--btn-gap)"
+    <button class="w-fit flex! items-center justify-center
+    rounded-button px-btn-x py-btn-y font-medium text-xl
+    gap-x-(--btn-gap) border-glow-primary"
     :class="{
         'text-primary-text bg-gradiant-primary border-thin border-primary-start shadow-lg': $prop('variant') == 'primary',
         'text-secondary-text bg-gradiant-secondary shadow-md': $prop('variant') == 'secondary',
