--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&display=swap');
 @import 'tailwindcss';
 @import './themes/default.css';
-@import './themes/classic.css';
-@import './themes/modern.css';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
