feat(components): added new compositor features to components and added a router view component

--- a/resources/js/spa/components/nav.alpine.html
+++ b/resources/js/spa/components/nav.alpine.html
@@ -1,4 +1,4 @@
-<template class="block">
+<template>
     <nav class="w-full h-16 flex items-center justify-between border-b border-gray-500">
         <slot></slot>
     </nav>
