--- a/public/spa/layouts/dev.alpine.html
+++ b/public/spa/layouts/dev.alpine.html
@@ -1,19 +1,16 @@
 <template>
     <ui-nav>
-        <div class="yes">
+        <div class="flex gap-2 px-2">
             <template x-for="item in mainItems">
                 <ui-nav-item :name="item.name" :href="item.path"></ui-nav-item>
             </template>
         </div>
-        <ui-nav-item :name="mainItems[0].name" :href="mainItems[0].path"></ui-nav-item>
-        <ui-nav-item :name="mainItems[1].name" :href="mainItems[1].path"></ui-nav-item>
-    </ui-nav>
-    <template x-for="(value, index) in [1,2,3,4,5]" :key="index">
-        <div class="flex gap-1 border w-fit m-1">
-            <p x-text="index"></p>
-            <p x-text="value"></p>
+        <div class="flex gap-2 px-2">
+            <template x-for="item in secondaryItems">
+                <ui-nav-item :name="item.name" :href="item.path"></ui-nav-item>
+            </template>
         </div>
-    </template>
+    </ui-nav>
     <div>
         <slot></slot>
     </div>
@@ -21,6 +18,7 @@
 
 <script setup>
     return {
+        show: false,
         mainItems: [
             {
                 name: "home",
