--- a/resources/js/ui/components/user-info.alpine.html
+++ b/resources/js/ui/components/user-info.alpine.html
@@ -5,7 +5,7 @@
             class="flex justify-between items-center py-2 px-4 hover:bg-gray-100">
             <div class="flex items-center gap-2">
                 <div class="w-10 h-10 px-2 py-2 rounded-lg bg-gray-100">
-                    <img x-show="showOriginal" :src="$props.user.entreprise.url" @error="showOriginal = false">
+                    <img x-show="showOriginal" src="" @error="showOriginal = false">
                     <icon-user class="w-full h-fit" x-show="!showOriginal"></icon-user>
                 </div>
                 <p class="text-sm" x-format>{{ $props.user.name + " " + $props.user.lastname }}</p>
@@ -16,7 +16,7 @@
             class="w-[95%] px-2 py-4 mx-1 h-fit rounded-lg shadow border border-gray-200 bg-white transition-opacity">
             <div class="flex items-center gap-2 mb-2">
                 <div class="w-10 h-10 px-2 py-2 rounded-lg bg-gray-100">
-                    <img x-show="showOriginal" :src="$props.user.entreprise.url" @error="showOriginal = false">
+                    <img x-show="showOriginal" src="" @error="showOriginal = false">
                     <icon-user class="w-full h-fit" x-show="!showOriginal"></icon-user>
                 </div>
                 <div class="text-left">
